--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Ecommerce Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -387,13 +389,16 @@
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address : </strong> jaunpur Uttar Pradesh</p>
-            <p><strong>Phone : </strong> +91 9005404736</p>
+            <p><strong>Address : </strong> xyz Uttar Pradesh India</p>
+            <p><strong>Phone : </strong> +91 xxxxxxxxxx</p>
             <p><strong>Hours : </strong> 10:00 AM - 10:00 PM</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icon">
-                    <i></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    
                 </div>
             </div>
         </div>
@@ -432,6 +437,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/107734ef36.js" crossorigin="anonymous"></script>
 </body>
 </html>
