--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/f2.jpg" alt="">
@@ -101,7 +101,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/f3.jpg" alt="">
@@ -117,7 +117,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/f4.jpg" alt="">
@@ -133,7 +133,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/f5.jpg" alt="">
@@ -149,7 +149,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/f6.jpg" alt="">
@@ -165,7 +165,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/f7.jpg" alt="">
@@ -181,7 +181,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/f8.jpg" alt="">
@@ -197,7 +197,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
         </div>
     </section>
@@ -226,7 +226,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/n2.jpg" alt="">
@@ -242,7 +242,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/n3.jpg" alt="">
@@ -258,7 +258,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/n4.jpg" alt="">
@@ -274,7 +274,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/n5.jpg" alt="">
@@ -290,7 +290,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/n6.jpg" alt="">
@@ -306,7 +306,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/n7.jpg" alt="">
@@ -322,7 +322,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
             <div class="pro">
                 <img src="img/products/n8.jpg" alt="">
@@ -338,7 +338,7 @@
                     </div>
                     <h4>$68</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
         </div>
     </section>
@@ -398,6 +398,8 @@
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-pinterest-p"></i>
+                    <i class="fa-brands fa-youtube"></i>
                     
                 </div>
             </div>
