update some details

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     
+    <!-- header section -->
     <section id="header">
         <a href="#"><img src="img/logo.png" alt="logo"></a>
 
@@ -32,6 +33,7 @@
         </div>
     </section>
 
+    <!-- Hero section to display the details inside the landing page -->
     <section id="hero">
         <h4>Trade-in-offer</h4>
         <h2>Super value deals</h2>
@@ -40,6 +42,7 @@
         <button>Shop Now</button>
     </section>
 
+    <!-- feature section  -->
     <section id="feature" class="section-p1">
         <div class="fe-box">
             <img src="img/features/f1.png" alt="">
@@ -67,6 +70,7 @@
         </div>
     </section>
 
+    <!-- product section -->
     <section id="product1" class="section-p1">
         <h2>Featured Products</h2>
         <p>Summer Collection New Morden Design</p>
@@ -202,12 +206,14 @@
         </div>
     </section>
 
+    <!-- banner section -->
     <section id="banner" class="section-m1">
         <h4>Repair Services</h4>
         <h2>Up to <span> 70% Off</span> All t-shirt & Accessories</h2>
         <button class="normal">Explore More</button>
     </section>
 
+    <!-- new arrival product -->
     <section id="product1" class="section-p1">
         <h2>New Arrivals</h2>
         <p>Summer Collection New Morden Design</p>
@@ -343,7 +349,9 @@
         </div>
     </section>
 
+    <!-- banner box section -->
     <section id="sm-banner" class="section-p1">
+        <!-- offer section -->
         <div class="banner-box">
             <h4>Crazy deals</h4>
             <h2>buy 1 get 1 free</h2>
@@ -351,6 +359,7 @@
             <button class="white">Learn More</button>
         </div>
         
+        <!-- up-comming collection -->
         <div class="banner-box banner-box2">
             <h4>spring / summer</h4>
             <h2>Up-Comming Season</h2>
@@ -359,6 +368,7 @@
         </div>
     </section>
 
+    <!-- banner section winter,footwear and trendy collection -->
     <section id="banner3">
         <div class="banner-box">
             <h2>SESSIONAL SALE</h2>
@@ -374,6 +384,7 @@
         </div>
     </section>
 
+    <!-- newsletter banner section -->
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up for Newsletters</h4>
@@ -385,6 +396,7 @@
         </div>
     </section>
 
+    <!-- about section / company details -->
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
